--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
     <section class="border01">
       <dl>
         <dt class="bgcolor01">1일차 - jquery 소개와 기본 문법</dt>
-        <dd><a href="../04JAVASCRIPT/0106/01_제이쿼리소개와 문법.html" title="01_제이쿼리소개와 문법">01_제이쿼리소개와 문법</a></dd>
-        <dd><a href="./1129/symentic.html" title="시멘틱구조 태그">02_제이쿼리 선택자와 css메소드 활용하기</a></dd>
+        <dd><a href="./0106/01_제이쿼리소개와 문법.html" title="01_제이쿼리소개와 문법">01_제이쿼리소개와 문법</a></dd>
+        <dd><a href="./0106/02_제이쿼리 선택자와 css메소드 활용하기.html" title="02_제이쿼리 선택자와 css메소드 활용하기">02_제이쿼리 선택자와 css메소드 활용하기</a></dd>
       </dl>
     </section>
     <dl>
       <dt class="bgcolor01">2일차 - 제이쿼리 이벤트,효과</dt>
-      <dd><a href="../04JAVASCRIPT/0109/01_jquery_event.html" title="제이쿼리 이벤트">01_jquery_event</a></dd>
-      <dd><a href="../04JAVASCRIPT/0109/02_jquery_effect.html" title="제이쿼리 효과">02_jquery_effect</a></dd>
-      <dd><a href="../04JAVASCRIPT/0109/exec01.html" title="실습에제">실습예제 쿠팡 슬라이드 업 효과</a></dd>
+      <dd><a href="./0109/01_jquery_event.html" title="제이쿼리 이벤트">01_jquery_event</a></dd>
+      <dd><a href="./0109/02_jquery_effect.html" title="제이쿼리 효과">02_jquery_effect</a></dd>
+      <dd><a href="./0109/exec01.html" title="실습에제">실습예제 쿠팡 슬라이드 업 효과</a></dd>
     </dl>
 
 </body>
