--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
       <dd><a href="./0109/02_jquery_effect.html" title="제이쿼리 효과">02_jquery_effect</a></dd>
       <dd><a href="./0109/exec01.html" title="실습에제">실습예제 쿠팡 슬라이드 업 효과</a></dd>
     </dl>
+    <dl>
+      <dt class="bgcolor01">3일차 - 제이쿼리 fadeIn_Out_slide</dt>
+      <dd><a href="./0110/fadeIn_Out_slide.html" title="제이쿼리 이벤트">01_jquery_fadeIn_Out_slide</a></dd>
+      <dd><a href="./0110/exec.html" title="제이쿼리 효과">02_jquery_fadeIn_Out_slide실습예제</a></dd>
+      
+    </dl>
+    <dl>
+      <dt class="bgcolor01">4일차 - 제이쿼리 animate 메서드</dt>
+      <dd><a href="./0111/01_animate매서드.html" title="애니메이트 메서드">01_jquery_animate</a></dd>
+      <dd><a href="./0111/exec01.html" title="애니메이트 메서드 실습예제">02_jquery_animate실습예제</a></dd>
+      
+    </dl>
 
 </body>
 </html>
