--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
     </dl>
     <dl>
       <dt class="bgcolor01">11일차 - 제이쿼리 문서객체조작</dt>
-      <dd><a href="./0126/jquery_DOM_class.html" title="애니메이트 메서드">01_제이쿼리 문서객체조작(class)</a></dd>
-      <dd><a href="./0126/jquery_DOM_add.html" title="애니메이트 메서드 실습예제">02_제이쿼리 문서객체조작(내용추가,삭제)</a></dd>
-      <dd><a href="./0126/jquery_DOM_modal_window.html" title="애니메이트 메서드 실습예제">03_제이쿼리 모달윈도(쿠키)</a></dd>
-      <dd><a href="./0126/jquery_DOM_modal_window1.html" title="애니메이트 메서드 실습예제">03_제이쿼리 모달윈도(쿠키)</a></dd>
-      <dd><a href="./0126/jquery_DOM_image.html" title="애니메이트 메서드 실습예제">02_제이쿼리 흘러가는 이미지 슬라이드(협력사 배너)</a></dd>
+      <dd><a href="./0126/jquery_DOM_class.html" title="01_제이쿼리 문서객체조작(class)">01_제이쿼리 문서객체조작(class)</a></dd>
+      <dd><a href="./0126/jquery_DOM_add.html" title="02_제이쿼리 문서객체조작(내용추가,삭제)">02_제이쿼리 문서객체조작(내용추가,삭제)</a></dd>
+      <dd><a href="./0126/jquery_DOM_modal_window.html" title="03_제이쿼리 모달윈도(쿠키)">03_제이쿼리 모달윈도(쿠키)</a></dd>
+      <dd><a href="./0126/jquery_DOM_modal_window1.html" title="03_제이쿼리 모달윈도(쿠키)">03_제이쿼리 모달윈도(쿠키)</a></dd>
+      <dd><a href="./0126/jquery_DOM_image.html" title="02_제이쿼리 흘러가는 이미지 슬라이드(협력사 배너)">02_제이쿼리 흘러가는 이미지 슬라이드(협력사 배너)</a></dd>
       
     </dl>
 
